--- a/dogdate.html
+++ b/dogdate.html
@@ -17,5 +17,8 @@
             <h5>Dog Dating App</h5>
         </div>
     </div>
+    <div>
+        <h6 class="des-text">UX Research Using <span>Design Thinking</span></h6>
+    </div>
 </body>
 </html>
