--- a/dogdate.html
+++ b/dogdate.html
@@ -20,5 +20,13 @@
     <div>
         <h6 class="des-text">UX Research Using <span>Design Thinking</span></h6>
     </div>
+    <section class="desing-thinking-phases">
+        <div class="div-empathize">Empathize</div>
+        <div class="div-define">Define</div>
+        <div class="div-define">Ideate</div>
+        <div class="div-define">Prototype</div>
+        <div class="div-define">Iterate</div>
+
+    </section>
 </body>
 </html>
