--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                 <img alt="portfolio-profile" class="profile-img" src="https://i.ibb.co/4mLtqM4/foto-perfil.jpg"></img>
             </div>
             <div class="right-home-1">
-                <h5 class="home-text-1">Front-End Developer</h5>
-                <p class="info-home-1">Hi! I'm Lucas a Front-End Developer-Ux/Ui designer </p>
+                <h5 class="home-text-1">Ux Designer Front-End developer</h5>
+                <p class="info-home-1">Hi! I'm Lucas a Ux designer and Front End Developer </p>
                 <div class="text-projects"><p>Check out my projects !</p><button class="button-1" onclick="window.location.href='/proyects.html'"><a href="/proyects"></a>Go !</button></div> 
                 <div class="info-home">
                     <a target="_blank" rel="noreferrer" href="https://github.com/Lucaasdfgh"><i class="fab fa-github-square fa-2x"></i></a> 
